--- a/Firefox/manifest.json
+++ b/Firefox/manifest.json
@@ -1,7 +1,7 @@
 {
 
   "manifest_version": 2,
-  "name": "Quickdrag WE",
+  "name": "QuickDrag WE",
   "permissions": ["tabs"],
   "version": "1.1",
 
