--- a/Firefox/manifest.json
+++ b/Firefox/manifest.json
@@ -1,32 +1,38 @@
 {
-
   "manifest_version": 2,
   "name": "QuickDrag WE",
-  "permissions": ["tabs", "storage", "cookies", "downloads"],
+  "permissions": [
+    "tabs",
+    "storage",
+    "cookies",
+    "downloads"
+  ],
   "version": "4.4",
-
   "description": "\u30c9\u30e9\u30c3\u30b0\uff06\u30c9\u30ed\u30c3\u30d7\u30b8\u30a7\u30b9\u30c1\u30e3\u30fc\u306e\u6a5f\u80fd\u3092\u62e1\u5f35\u3057\u3001\u9078\u629e\u3057\u305fURL\u30fb\u30c6\u30ad\u30b9\u30c8\u306eWeb\u691c\u7d22\u3001\u30da\u30fc\u30b8\u4e0a\u306e\u753b\u50cf\u306e\u4fdd\u5b58\u3092\u53ef\u80fd\u306b\u3057\u307e\u3059\u3002",
-
   "icons": {
     "48": "icons/icon_48.png",
     "96": "icons/icon_96.png"
   },
-
   "options_ui": {
-      "page": "options.html",
-      "browser_style": true
+    "page": "options.html",
+    "browser_style": true
   },
-
   "background": {
-      "scripts": ["background.js"]
-   },
-
-  "content_scripts" : [{
-    "matches" : ["<all_urls>"],
-    "js" : ["quickdrag.js"],
-    "run_at" : "document_start",
-    "match_about_blank": true,
-    "all_frames": true
-  }]
-
+    "scripts": [
+      "background.js"
+    ]
+  },
+  "content_scripts": [
+    {
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": [
+        "quickdrag.js"
+      ],
+      "run_at": "document_start",
+      "match_about_blank": true,
+      "all_frames": true
+    }
+  ]
 }
